--- a/src/index.jade
+++ b/src/index.jade
@@ -4,9 +4,9 @@ html
     title Voix
     meta(charset='utf-8')
     meta(name='description'
-      content='ТОО Voix, Разработка ПО и сайтов, г.Алматы, Казахстан')
+      content='ТОО Voix, Разработка программного обеспечения и сайтов, г.Алматы, Казахстан')
     meta(name='keywords'
-      content='Разработка ПО, автоматизация, сайты, Алматы, Казахстан')
+      content='Разработка, программное обеспечение, автоматизация, сайты, Алматы, Казахстан')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(name='google-site-verification'
       content='AUJxZrPDffY5MZKZ_w4EReCf2PYSCJAeQpvz6lqavNQ')
