--- a/src/index.jade
+++ b/src/index.jade
@@ -33,7 +33,7 @@ html
               p
                 i.fa.fa-check
                 b  Качественное ПО.
-                |  Мы специализируемся на создании корпоративного ПО и веб-сайтов любой сложности.
+                |  Мы специализируемся на создании корпоративного ПО любой сложности.
               p
                 i.fa.fa-check
                 b  Удобство.
