--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,13 @@
 			.image.left
 			{
 				float: left;
-				margin: 0 2em 2em 0;
+				margin: 0 1em 1em 0;
+			}
+
+			.image.right
+			{
+				float: right;
+				margin: 0 0 1em 1em;
 			}
 
 			.image.centered
