--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @charset 'UTF-8';
-@import url("font-awesome.min.css");
 @import url("http://fonts.googleapis.com/css?family=Orbitron:700");
 /*@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,800");*/
 
@@ -8,6 +7,11 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+
+/* workarounds */
+.my-fa-twitter:before {
+  content: "\f099";
+}
 
 /*********************************************************************************/
 /* Basic                                                                         */
