--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,9 @@
 		section,
 		article
 		{
+			line-height: 1.5em;
+			max-width: 60em;
+			margin: auto;
 			margin-bottom: 5em;
 		}
 
@@ -342,7 +345,8 @@
 			.image.centered
 			{
 				display: block;
-				margin: 0 0 2.5em 0;
+				margin: auto;
+				text-align: center;
 			}
 
 				.image.centered img
@@ -442,6 +446,12 @@
 			ul.default
 			{
 				list-style: disc;
+				padding-left: 1em;
+			}
+
+			ul.default ul {
+				list-style: circle;
+				margin-bottom: 0;
 				padding-left: 1em;
 			}
 
