--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -152,8 +152,7 @@
 		#logo h1
 		{
 			float: left;
-			margin: 0 0.35em 0 0;
-			padding: 0.1em 0.25em 0.3em 0.2em;
+			padding: 10px;
 			font-size: 3.25em;
 			letter-spacing: 0.05em;
 		}
